add mode button

--- a/src/controller.html
+++ b/src/controller.html
@@ -14,7 +14,13 @@
     <p class="row">
       <span>Data dir: </span>
       <span id="data-dir"></span>
-      <button class="button" id="data-dir-browse">Browse</button></p>
+      <button class="button" onclick="onBrowseButtonClick()">Browse</button></p>
     <p class="row"><span>Current File: </span><span id="current-file"></span></p>
+    <p class="row">
+      <span>Currnet mode: </span>
+      <span id="current-mode"></span>
+      <button class="button" onclick="onBibleButtonClick()">Bible</button>
+      <button class="button" onclick="onCCMButtonClick()">CCM</button>
+    </p>
   </body>
 </html>
