find bible by acronym

--- a/src/screen.html
+++ b/src/screen.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Screen</h1>
-    <p id="file-name"></p>
+    <p id="search-value"></p>
     <p id="file-content"></p>
     <script src="screen.js"></script>
   </body>
