add style to screen

--- a/src/controller.html
+++ b/src/controller.html
@@ -15,7 +15,7 @@
       <span>Data dir: </span>
       <span id="data-dir"></span>
       <button class="button" onclick="onBrowseButtonClick()">Browse</button></p>
-    <p class="row"><span>Current File: </span><span id="current-file"></span></p>
+    <p class="row"><span>Current value: </span><span id="current-value"></span></p>
     <p class="row">
       <span>Currnet mode: </span>
       <span id="current-mode"></span>
