--- a/src/screen.html
+++ b/src/screen.html
@@ -8,9 +8,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   </head>
   <body>
-    <h1>Screen</h1>
-    <p id="search-value"></p>
-    <p id="file-content"></p>
-    <script src="screen.js"></script>
+    <div class="container">
+      <div class="header-box">
+        <div class="header-inner-box">
+          <p id="search-value"></p>
+        </div>
+      </div>
+      <div class="content-box">
+        <div class="content-inner-box">
+          <p id="file-content"></p>
+        </div>
+      </div>
+      <script src="screen.js"></script>
+    </div>
   </body>
 </html>
